{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 42,
  "lineage": "6bb0ca24-d4c1-3a0f-245d-4be9b5e2626c",
  "resources": [
    {
      "module": "module.app_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:048831836751:security-group/sg-0fb2c371027973c97",
            "description": "Security group for web-servers with HTTP ports open within VPC",
            "egress": [],
            "id": "sg-0fb2c371027973c97",
            "ingress": [],
            "name": "web-sg-project-alpha-dev-20201125093134539000000001",
            "name_prefix": "web-sg-project-alpha-dev-",
            "owner_id": "048831836751",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg-project-alpha-dev",
              "environment": "dev",
              "project": "project-alpha"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a78801999ed659ca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.app_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-437161277",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0fb2c371027973c97",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "dependencies": [
            "module.app_security_group.module.sg.aws_security_group.this",
            "module.app_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24",
              "10.0.2.0/24"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-2234470676",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fb2c371027973c97",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app_security_group.module.sg.aws_security_group.this",
            "module.app_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24",
              "10.0.2.0/24"
            ],
            "description": "HTTP",
            "from_port": 8080,
            "id": "sgrule-3391285438",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fb2c371027973c97",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app_security_group.module.sg.aws_security_group.this",
            "module.app_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24",
              "10.0.2.0/24"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-2351831797",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fb2c371027973c97",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app_security_group.module.sg.aws_security_group.this",
            "module.app_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24",
              "10.0.2.0/24"
            ],
            "description": "JMX",
            "from_port": 1099,
            "id": "sgrule-1954402501",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0fb2c371027973c97",
            "self": false,
            "source_security_group_id": null,
            "to_port": 1099,
            "type": "ingress"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app_security_group.module.sg.aws_security_group.this",
            "module.app_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-1881187455",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0fb2c371027973c97",
            "self": true,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "dependencies": [
            "module.app_security_group.module.sg.aws_security_group.this",
            "module.app_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07a0da1997b55b23e",
            "arn": "arn:aws:ec2:us-west-2:048831836751:instance/i-0faa33b6fcf451c10",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0faa33b6fcf451c10",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02f94aabc283c92af",
            "private_dns": "ip-10-0-101-24.us-west-2.compute.internal",
            "private_ip": "10.0.101.24",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c21eed239ca85407",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0178ae23675c09de6",
            "tags": {
              "environment": "dev",
              "project": "project-alpha"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fb2c371027973c97"
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app_security_group.module.sg.aws_security_group.this",
            "module.app_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.ec2_instances.data.aws_ami.amazon_linux",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07a0da1997b55b23e",
            "arn": "arn:aws:ec2:us-west-2:048831836751:instance/i-0d7d7be5a642d9183",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d7d7be5a642d9183",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03063f7b4b7fa5613",
            "private_dns": "ip-10-0-102-206.us-west-2.compute.internal",
            "private_ip": "10.0.102.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-070bc090eb07c5cff",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb67712596d5d624",
            "tags": {
              "environment": "dev",
              "project": "project-alpha"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fb2c371027973c97"
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app_security_group.module.sg.aws_security_group.this",
            "module.app_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.ec2_instances.data.aws_ami.amazon_linux",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.elb_http.module.elb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:048831836751:loadbalancer/lb-4tu-project-alpha-dev",
            "availability_zones": [
              "us-west-2a",
              "us-west-2b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "lb-4tu-project-alpha-dev-678131161.us-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 3,
                "interval": 10,
                "target": "HTTP:80/index.html",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "lb-4tu-project-alpha-dev",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "HTTP",
                "lb_port": 80,
                "lb_protocol": "HTTP"
              }
            ],
            "name": "lb-4tu-project-alpha-dev",
            "security_groups": [
              "sg-0c9b9437952876cf8"
            ],
            "source_security_group": "048831836751/lb-sg-project-alpha-dev-20201125093134541300000002",
            "source_security_group_id": "sg-0c9b9437952876cf8",
            "subnets": [
              "subnet-039a9c5bff918e0b8",
              "subnet-0921c64931a21009e"
            ],
            "tags": {
              "Name": "lb-4tu-project-alpha-dev",
              "environment": "dev",
              "project": "project-alpha"
            },
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.lb_security_group.module.sg.aws_security_group.this",
            "module.lb_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.lb_id"
          ]
        }
      ]
    },
    {
      "module": "module.lb_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:048831836751:security-group/sg-0c9b9437952876cf8",
            "description": "Security group for load balancer with HTTP ports open within VPC",
            "egress": [],
            "id": "sg-0c9b9437952876cf8",
            "ingress": [],
            "name": "lb-sg-project-alpha-dev-20201125093134541300000002",
            "name_prefix": "lb-sg-project-alpha-dev-",
            "owner_id": "048831836751",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lb-sg-project-alpha-dev",
              "environment": "dev",
              "project": "project-alpha"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a78801999ed659ca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.lb_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1799638934",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c9b9437952876cf8",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "dependencies": [
            "module.lb_security_group.module.sg.aws_security_group.this",
            "module.lb_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lb_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-2213780741",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c9b9437952876cf8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.lb_security_group.module.sg.aws_security_group.this",
            "module.lb_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 8080,
            "id": "sgrule-1544083425",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c9b9437952876cf8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "dependencies": [
            "module.lb_security_group.module.sg.aws_security_group.this",
            "module.lb_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-1441462973",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c9b9437952876cf8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.lb_security_group.module.sg.aws_security_group.this",
            "module.lb_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "JMX",
            "from_port": 1099,
            "id": "sgrule-3855621581",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c9b9437952876cf8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 1099,
            "type": "ingress"
          },
          "dependencies": [
            "module.lb_security_group.module.sg.aws_security_group.this",
            "module.lb_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lb_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": -1,
            "id": "sgrule-289809831",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c9b9437952876cf8",
            "self": true,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "dependencies": [
            "module.lb_security_group.module.sg.aws_security_group.this",
            "module.lb_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-02051b572b6402254",
            "public_dns": "ec2-44-237-20-183.us-west-2.compute.amazonaws.com",
            "public_ip": "44.237.20.183",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "-us-west-2a",
              "environment": "dev",
              "project": "project-alpha"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-068e00372c34590de",
            "public_dns": "ec2-44-241-122-77.us-west-2.compute.amazonaws.com",
            "public_ip": "44.241.122.77",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "-us-west-2b",
              "environment": "dev",
              "project": "project-alpha"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:048831836751:internet-gateway/igw-0076ef674ec674c56",
            "id": "igw-0076ef674ec674c56",
            "owner_id": "048831836751",
            "tags": {
              "environment": "dev",
              "project": "project-alpha"
            },
            "vpc_id": "vpc-0a78801999ed659ca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02051b572b6402254",
            "id": "nat-04eafa550c07accfe",
            "network_interface_id": "eni-09287a7d9c522a94a",
            "private_ip": "10.0.1.146",
            "public_ip": "44.237.20.183",
            "subnet_id": "subnet-039a9c5bff918e0b8",
            "tags": {
              "Name": "-us-west-2a",
              "environment": "dev",
              "project": "project-alpha"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-068e00372c34590de",
            "id": "nat-0c39e9ecbd58ce240",
            "network_interface_id": "eni-03dcf2dd8f9a2cc52",
            "private_ip": "10.0.2.242",
            "public_ip": "44.241.122.77",
            "subnet_id": "subnet-0921c64931a21009e",
            "tags": {
              "Name": "-us-west-2b",
              "environment": "dev",
              "project": "project-alpha"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ce47412c442f629b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-04eafa550c07accfe",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ce47412c442f629b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05a5f92c6b8441ba21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0c39e9ecbd58ce240",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05a5f92c6b8441ba2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0076ef674ec674c56",
            "id": "r-rtb-0db9196d4ce85be6c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0db9196d4ce85be6c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ce47412c442f629b",
            "owner_id": "048831836751",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "-private-us-west-2a",
              "environment": "dev",
              "project": "project-alpha"
            },
            "vpc_id": "vpc-0a78801999ed659ca"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05a5f92c6b8441ba2",
            "owner_id": "048831836751",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "-private-us-west-2b",
              "environment": "dev",
              "project": "project-alpha"
            },
            "vpc_id": "vpc-0a78801999ed659ca"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0db9196d4ce85be6c",
            "owner_id": "048831836751",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "-public",
              "environment": "dev",
              "project": "project-alpha"
            },
            "vpc_id": "vpc-0a78801999ed659ca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054a89cf5672f1431",
            "route_table_id": "rtb-0ce47412c442f629b",
            "subnet_id": "subnet-0178ae23675c09de6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b401dcadfe2ccade",
            "route_table_id": "rtb-05a5f92c6b8441ba2",
            "subnet_id": "subnet-0fb67712596d5d624"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf073f29f74033e3",
            "route_table_id": "rtb-0db9196d4ce85be6c",
            "subnet_id": "subnet-039a9c5bff918e0b8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04679a3b72c9dac0e",
            "route_table_id": "rtb-0db9196d4ce85be6c",
            "subnet_id": "subnet-0921c64931a21009e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:048831836751:subnet/subnet-0178ae23675c09de6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0178ae23675c09de6",
            "map_public_ip_on_launch": false,
            "owner_id": "048831836751",
            "tags": {
              "Name": "-private-us-west-2a",
              "environment": "dev",
              "project": "project-alpha"
            },
            "vpc_id": "vpc-0a78801999ed659ca"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:048831836751:subnet/subnet-0fb67712596d5d624",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0fb67712596d5d624",
            "map_public_ip_on_launch": false,
            "owner_id": "048831836751",
            "tags": {
              "Name": "-private-us-west-2b",
              "environment": "dev",
              "project": "project-alpha"
            },
            "vpc_id": "vpc-0a78801999ed659ca"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:048831836751:subnet/subnet-039a9c5bff918e0b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-039a9c5bff918e0b8",
            "map_public_ip_on_launch": true,
            "owner_id": "048831836751",
            "tags": {
              "Name": "-public-us-west-2a",
              "environment": "dev",
              "project": "project-alpha"
            },
            "vpc_id": "vpc-0a78801999ed659ca"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:048831836751:subnet/subnet-0921c64931a21009e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0921c64931a21009e",
            "map_public_ip_on_launch": true,
            "owner_id": "048831836751",
            "tags": {
              "Name": "-public-us-west-2b",
              "environment": "dev",
              "project": "project-alpha"
            },
            "vpc_id": "vpc-0a78801999ed659ca"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:048831836751:vpc/vpc-0a78801999ed659ca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a51c52b9cd29ddea",
            "default_route_table_id": "rtb-07c911a08938090d7",
            "default_security_group_id": "sg-0f7d308497052567b",
            "dhcp_options_id": "dopt-26126f5e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a78801999ed659ca",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07c911a08938090d7",
            "owner_id": "048831836751",
            "tags": {
              "environment": "dev",
              "project": "project-alpha"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}